--- a/package.json
+++ b/package.json
@@ -9,14 +9,33 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-navigation/bottom-tabs": "^7.3.3",
+    "@react-navigation/native": "^7.0.19",
+    "@react-navigation/native-stack": "^7.3.2",
+    "@react-navigation/stack": "^7.2.3",
+    "@supabase/supabase-js": "^2.33.1",
     "expo": "~52.0.40",
+    "expo-document-picker": "~11.10.1",
+    "expo-file-system": "~16.0.8",
+    "expo-image-picker": "~14.7.1",
+    "expo-router": "^4.0.19",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "0.76.7"
+    "react-native": "0.76.7",
+    "react-native-draggable-flatlist": "^4.0.1",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
+    "@types/react-native": "^0.72.8",
+    "babel-preset-expo": "^12.0.9",
     "typescript": "^5.3.3"
   },
   "private": true
