--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/slider": "^4.5.6",
     "@react-navigation/bottom-tabs": "^7.3.3",
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/native-stack": "^7.3.2",
     "@react-navigation/stack": "^7.2.3",
     "@supabase/supabase-js": "^2.33.1",
     "expo": "~52.0.40",
+    "expo-av": "^15.0.2",
     "expo-document-picker": "~11.10.1",
     "expo-file-system": "~16.0.8",
     "expo-image-picker": "~14.7.1",
